--- a/ACI/Nexus-As-Code - ACI/Initial Fabric Deployment/data/fabric_policies.nac.yaml
+++ b/ACI/Nexus-As-Code - ACI/Initial Fabric Deployment/data/fabric_policies.nac.yaml
@@ -33,7 +33,7 @@ apic:
           - ip: 1.2.3.b
             preferred: false
         domains:
-          - name: domain-name
+          - name: cisco.com
             default: true
 
       
