Fabric Bring up updates

--- a/VXLAN/vxlan-as-code/nac-vxlan/ansible.cfg
+++ b/VXLAN/vxlan-as-code/nac-vxlan/ansible.cfg
@@ -17,3 +17,12 @@ nocows = 1
 
 # Color output
 force_color = 1
+
+# Timeout settings
+timeout = 30
+
+[persistent_connection]
+# Persistent connection settings for httpapi
+command_timeout = 30
+connect_timeout = 30
+connect_retry_timeout = 15
