--- a/VXLAN/vxlan-as-code/nac-vxlan/host_vars/nac-fabric1/networks.nac.yaml
+++ b/VXLAN/vxlan-as-code/nac-vxlan/host_vars/nac-fabric1/networks.nac.yaml
@@ -2,48 +2,36 @@
 vxlan:
   overlay:
     networks:
-      - name: NaC-Net01
-        vrf_name: NaC-VRF01
-        net_id: 130001
-        vlan_id: 2301
-        vlan_name: NaC-Net01_vlan2301
-        gw_ip_address: "192.168.12.1/24"
-        network_attach_group: all
-      - name: NaC-Net02
-        vrf_name: NaC-VRF02
-        net_id: 130002
-        vlan_id: 2302
-        vlan_name: NaC-Net02_vlan2302
-        gw_ip_address: "192.168.12.2/24"
+      - name: PROD_1_NET
+        vrf_name: PROD_VRF
+        net_id: 30000
+        vlan_id: 2300
+        vlan_name: PROD_1_NET
+        gw_ip_address: "192.168.11.1/24"
         network_attach_group: leaf1
-      - name: NaC-Net03
-        vrf_name: NaC-VRF03
-        net_id: 130003
-        vlan_id: 2303
-        vlan_name: NaC-Net03_vlan2303
-        gw_ip_address: "192.168.12.3/24"
-        gw_ipv6_address: "2001::1/64"
-        route_target_both: true
-        l3gw_on_border: true
-        mtu_l3intf: 9000
-        int_desc: "Configured by NetAsCode"
+      - name: PROD_2_NET
+        vrf_name: PROD_VRF
+        net_id: 30001
+        vlan_id: 2301
+        vlan_name: PROD_2_NET
+        gw_ip_address: "192.168.12.1/24"
         network_attach_group: leaf2
     network_attach_groups:
       - name: all
         switches:
-          - hostname: netascode-leaf1
+          - hostname: Site1-L1
             ports:
-              - Ethernet1/13
-              - Ethernet1/14
-          - hostname: netascode-leaf2
+              - Ethernet1/5
+          - hostname: Site1-L2
             ports:
-              - Ethernet1/13
-              - Ethernet1/14
+              - Ethernet1/5
       - name: leaf1
         switches:
-          - hostname: netascode-leaf1
-            ports: []
+          - hostname: Site1-L1
+            ports:
+              - Ethernet1/5
       - name: leaf2
         switches:
-          - hostname: netascode-leaf2
-            ports: []
+          - hostname: Site1-L2
+            ports:
+              - Ethernet1/5
