--- a/VXLAN/vxlan-as-code/nac-vxlan/inventory.yaml
+++ b/VXLAN/vxlan-as-code/nac-vxlan/inventory.yaml
@@ -5,5 +5,4 @@ all:
     ndfc:
       hosts:
         nac-fabric1:
-         # ansible_host: "{{ lookup('ansible.builtin.env', 'ND_HOST') }}"
-          ansible_host: 198.18.4.2
+          ansible_host: "{{ lookup('ansible.builtin.env', 'ND_HOST') }}"
