--- a/VXLAN/vxlan-as-code/nac-vxlan/vxlan.yaml
+++ b/VXLAN/vxlan-as-code/nac-vxlan/vxlan.yaml
@@ -9,7 +9,8 @@
     # Prepare service model for all subsequent roles
     # Note - The validate role is run automatically as a prerequisite to the create, deploy, and remove roles.
     #
-    # - role: cisco.nac_dc_vxlan.validate
+   # - role: cisco.nac_dc_vxlan.validate
+   #   tags: 'role_validate'
     # -----------------------
     # DataCenter Roles
     #   Role: cisco.netascode_dc_vxlan.dtc manages direct to controller NDFC workflows
@@ -20,5 +21,5 @@
     - role: cisco.nac_dc_vxlan.dtc.deploy
       tags: 'role_deploy'
 
-    - role: cisco.nac_dc_vxlan.dtc.remove
-      tags: 'role_remove'
+   # - role: cisco.nac_dc_vxlan.dtc.remove
+   #   tags: 'role_remove'
