--- a/NXOS-Ansible/Automating-NXOS-using-Ansible/Playbooks/Ansible-NXOS/roles/leaf/tasks/main.yml
+++ b/NXOS-Ansible/Automating-NXOS-using-Ansible/Playbooks/Ansible-NXOS/roles/leaf/tasks/main.yml
@@ -53,6 +53,11 @@
         sparse: true
     loop: "{{ l3interfaces }}"
 
+-  name: CONFIGURE PIM RP ADDRESS
+   cisco.nxos.nxos_pim_rp_address:
+        rp_address: "{{ rp_address }}"
+        state: present
+
 -   name: ENABLE NV OVERLAY EVPN
     cisco.nxos.nxos_evpn_global:
         nv_overlay_evpn: true
