--- a/NXOS-Ansible/Automating-NXOS-using-Ansible/Playbooks/Ansible-NXOS/roles/spine-site2/tasks/main.yml
+++ b/NXOS-Ansible/Automating-NXOS-using-Ansible/Playbooks/Ansible-NXOS/roles/spine-site2/tasks/main.yml
@@ -1,3 +1,100 @@
 #SPDX-License-Identifier: MIT-0
 ---
 # tasks file for spine-site2
+-   name: ENABLE FEATURES
+    cisco.nxos.nxos_feature:
+        feature: "{{item.feature }}"
+    loop: "{{ features }}"
+
+-   name: ENABLE FEATURES
+    cisco.nxos.nxos_config:
+        lines: "feature nv overlay"
+
+-   name: CONFIGURE LAYER 3 INTERFACES
+    cisco.nxos.nxos_interfaces:
+        config:
+        -   name: "{{ item.interface }}"
+            description: "{{ item.description }}"
+            enabled: true
+            mtu: "{{ 9216 if 'loopback' not in item.interface | lower else omit }}"
+    loop: "{{ l3interfaces }}"
+
+-   name: CONFIGURE INTERFACE IP ADDR
+    cisco.nxos.nxos_l3_interfaces:
+        config:
+        -   name: "{{ item.interface }}"
+            ipv4:
+            -   address: "{{ item.addr }}/{{ item.mask }}"
+    loop: "{{ l3interfaces }}"
+
+-   name: CONFIGURE OSPF PROCESS
+    cisco.nxos.nxos_ospfv2:
+        config:
+          processes:
+            - process_id: "{{ ospf_process_id }}"
+              router_id: "{{ router_id }}"
+        state: merged
+
+-   name: ASSOCIATE INTERFACES WITH OSPF PROCESS
+    cisco.nxos.nxos_ospf_interfaces:
+        config:
+        -   name: "{{ item.interface }}"
+            address_family:
+            -   afi: ipv4
+                processes:
+                -   process_id: "{{ ospf_process_id }}"
+                    area:
+                        area_id: "{{ ospf_area }}"
+                network: "{{ 'point-to-point' if 'loopback' not in item.interface | lower else omit }}"
+    loop: "{{ l3interfaces }}"
+
+-   name: CONFIGURE PIM INTERFACES
+    cisco.nxos.nxos_pim_interface:
+        interface: "{{ item.interface }}"
+        sparse: true
+    loop: "{{ l3interfaces }}"
+
+-  name: CONFIGURE PIM RP ADDRESS
+   cisco.nxos.nxos_pim_rp_address:
+        rp_address: "{{ rp_address }}"
+        state: present
+
+-   name: CONFIGURE PIM ANYCAST RP
+    cisco.nxos.nxos_config:
+        lines:
+          - ip pim anycast-rp {{ rp_address }} {{ s1_spine1_loopback1 }}
+          - ip pim anycast-rp {{ rp_address }} {{ s1_spine2_loopback1 }}
+
+-   name: ENABLE NV OVERLAY EVPN
+    cisco.nxos.nxos_evpn_global:
+        nv_overlay_evpn: true
+
+-   name: CONFIGURE BGP ASN AND ROUTER ID
+    cisco.nxos.nxos_bgp_global:
+        config:
+            as_number: "{{ asn }}"
+            router_id: "{{ router_id }}"
+            neighbors:
+            -   neighbor_address: "{{ item.neighbor }}"
+                remote_as: "{{ item.remote_as }}"
+                update_source: "{{ item.update_source }}"
+        state: merged
+    loop: "{{ bgp_neighbors }}"
+
+-   name: CONFIGURE BGP NEIGHBORS
+    cisco.nxos.nxos_bgp_neighbor_address_family:
+        config:
+            as_number: "{{ asn }}"
+            neighbors:
+            -   neighbor_address: "{{ item.neighbor }}"
+                address_family:
+                -   afi: l2vpn
+                    safi: evpn
+                    send_community:
+                        both: true
+                    route_reflector_client: true
+    loop: "{{ bgp_neighbors }}"
+
+-   name: SAVE RUN CONFIG TO STARTUP CONFIG
+    cisco.nxos.nxos_config:
+        save_when: always
